--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -11,15 +11,16 @@
         <div class="display-none" id="filter2">
             <div class="grid2">
                 <div class="filter"><a href="/">Home</a></div>
-                <div class="filter"><a href="/instock/">In Stock</a></div>
-                <div class="filter"><a href="/vector3/">Vector</a></div>
+                <div class="filter"><a href="/cs-sportrigs/">Sport Rigs</a></div>
                 <div class="filter"><a href="/tandem/">Tandem</a></div>
                 <div class="filter"><a href="/student/">Student</a></div>
                 <div class="filter"><a href="/javelin-odyssey/">Javelin</a></div>
+                <div class="filter"><a href="/canopies/">All Canopies</a></div>
+                <div class="filter"><a href="/pulse-canopies/">Pulse Canopies</a></div>
                 <div class="filter"><a href="/#contact-footer">Contact Us!</a></div>
                 <div class="left-tag" id="sidebar-tag"><p class="sidebar-tag">NAVIGATION</p></div>
                 {% if stuff %}
-                <div class="filter"><a href="/admin/" target="_blank">Admin</a></div>
+                <div class="filter"><a href="/users/" target="_blank">Admin Home</a></div>
                 <div class="filter"><a href="manager/builder/" target="_blank">Add Item</a></div>
                 {% endif %}
             </div>
