--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -55,10 +55,10 @@
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="canopies-btn" href="/cs-canopies/">CANOPIES</a>
                     <div class="dropdown-content">
-                        <a href="###">All Canopies</a>
-                        <a href="/cs-canopies/">Sabre-3</a>
-                        <a href="###">Pulse</a>
-                        <a href="###">Tandem</a>
+                        <a href="/canopies/">All Canopies</a>
+                        <a href="/sabre3-canopies/">Sabre-3 Canopies</a>
+                        <a href="/pulse-canopies/">Pulse Canopies</a>
+                        <a href="###">Tandem Canopies</a>
                     </div>
                 </div>
                 <div class="nav-links"><a class="top-nav-links" id="javelin-btn" href="/cs-javelin/">JAVELIN ODYSSEY</a>
