--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -38,7 +38,13 @@
                 for stock and we will continue to do so until the situation improves. The canopies
                 are listed here by size first and then by arrival date. A few are in stock but
                 most are due over the next three months. </p>
-            <h2>PD Sabre-3</h2>
+            <div id="canopies-btn-group" class="canopies-btn-group">
+                <a href="/sabre3-canopies/">Sabre 3 Canopies</a>
+                <a href="/pulse-canopies/">Pulse Canopies</a>
+            </div>
+
+            <h2>ALL Canopies Currently Available</h2>
+
         </div>
         <div id="filter" class="display-opac">
             <div class="grid">
