--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -53,7 +53,7 @@
                         <a href="/cs-student/">Coming Soon</a>
                     </div>
                 </div>
-                <div class="nav-links"><a class="top-nav-links" id="canopies-btn" href="/cs-canopies/">CANOPIES</a>
+                <div class="nav-links"><a class="top-nav-links" id="canopies-btn" href="/canopies/">CANOPIES</a>
                     <div class="dropdown-content">
                         <a href="/canopies/">All Canopies</a>
                         <a href="/sabre3-canopies/">Sabre-3 Canopies</a>
