--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -60,7 +60,7 @@
 
             </div>
         </div>
-    {% else if sabre_3 %}
+    {% elif sabre_3 %}
         <div id="div-top">
             <h1>Sabre-3 CANOPIES IN STOCK OR COMING SOON</h1>
             <p>Our focus here has always been on stocking Vector and then Javelin containers,
