--- a/frontend/templates/instock-sportrigs.html
+++ b/frontend/templates/instock-sportrigs.html
@@ -11,6 +11,9 @@
     <div class="main-container">
     <div class="instock">
     <h1>Currently In Stock</h1>
+    {% if user_is_admin %}
+        <p class="admin-banner">You are currently viewing an Admin-View logged in as {{ user.username }}</p>
+    {% endif %}
         {% for x in containers %}
                 <div class="container">
                     <div class="inner-container">
