--- a/frontend/templates/canopies.html
+++ b/frontend/templates/canopies.html
@@ -7,7 +7,8 @@
 {% block content %}
 
     <div class="main-container">
-    <div class="instock">
+    {% if canopies %}
+        <div class="instock">
         <div class="display-none" id="filter2">
             <div class="grid2">
                 <div class="filter"><a href="/">Home</a></div>
@@ -15,7 +16,7 @@
                 <div class="filter"><a href="/tandem/">Tandem</a></div>
                 <div class="filter"><a href="/student/">Student</a></div>
                 <div class="filter"><a href="/javelin-odyssey/">Javelin</a></div>
-                <div class="filter"><a href="/canopies/">All Canopies</a></div>
+                <div class="filter"><a href="/sabre3-canopies/">Sabre 3 Canopies</a></div>
                 <div class="filter"><a href="/pulse-canopies/">Pulse Canopies</a></div>
                 <div class="filter"><a href="/#contact-footer">Contact Us!</a></div>
                 <div class="left-tag" id="sidebar-tag"><p class="sidebar-tag">NAVIGATION</p></div>
@@ -28,7 +29,6 @@
         {% if stuff %}
         <p class="admin-banner">You are currently viewing an Admin-View logged in as {{ user.username }}</p>
         {% endif %}
-    {% if canopies %}
         <div id="div-top">
             <h1>CANOPIES IN STOCK OR COMING SOON</h1>
             <p>Our focus here has always been on stocking Vector and then Javelin containers,
@@ -61,6 +61,27 @@
             </div>
         </div>
     {% elif sabre_3 %}
+        <div class="instock">
+        <div class="display-none" id="filter2">
+            <div class="grid2">
+                <div class="filter"><a href="/">Home</a></div>
+                <div class="filter"><a href="/cs-sportrigs/">Sport Rigs</a></div>
+                <div class="filter"><a href="/tandem/">Tandem</a></div>
+                <div class="filter"><a href="/student/">Student</a></div>
+                <div class="filter"><a href="/javelin-odyssey/">Javelin</a></div>
+                <div class="filter"><a href="/canopies/">All Canopies</a></div>
+                <div class="filter"><a href="/pulse-canopies/">Pulse Canopies</a></div>
+                <div class="filter"><a href="/#contact-footer">Contact Us!</a></div>
+                <div class="left-tag" id="sidebar-tag"><p class="sidebar-tag">NAVIGATION</p></div>
+                {% if stuff %}
+                <div class="filter"><a href="/users/" target="_blank">Admin Home</a></div>
+                <div class="filter"><a href="manager/builder/" target="_blank">Add Item</a></div>
+                {% endif %}
+            </div>
+        </div>
+        {% if stuff %}
+        <p class="admin-banner">You are currently viewing an Admin-View logged in as {{ user.username }}</p>
+        {% endif %}
         <div id="div-top">
             <h1>Sabre-3 CANOPIES IN STOCK OR COMING SOON</h1>
             <p>Our focus here has always been on stocking Vector and then Javelin containers,
@@ -72,8 +93,8 @@
                 are listed here by size first and then by arrival date. A few are in stock but
                 most are due over the next three months. </p>
             <div id="canopies-btn-group" class="canopies-btn-group">
-                <a href="/sabre3-canopies/">Sabre 3 Canopies</a>
                 <a href="/pulse-canopies/">Pulse Canopies</a>
+                <a href="/canopies/">All Canopies</a>
             </div>
 
             <h2>Sabre-3 Canopies Currently Available</h2>
@@ -92,6 +113,60 @@
 
             </div>
         </div>
+    {%  elif pulse %}
+        <div class="display-none" id="filter2">
+            <div class="grid2">
+                <div class="filter"><a href="/">Home</a></div>
+                <div class="filter"><a href="/instock/">In Stock</a></div>
+                <div class="filter"><a href="/cs-sportrigs/">Sport Rigs</a></div>
+                <div class="filter"><a href="/tandem/">Tandem</a></div>
+                <div class="filter"><a href="/student/">Student</a></div>
+                <div class="filter"><a href="/javelin-odyssey/">Javelin</a></div>
+                <div class="filter"><a href="/canopies/">All Canopies</a></div>
+                <div class="filter"><a href="/sabre3-canopies/">Sabre 3 Canopies</a></div>
+                <div class="filter"><a href="/#contact-footer">Contact Us!</a></div>
+                <div class="left-tag" id="sidebar-tag"><p class="sidebar-tag">NAVIGATION</p></div>
+                {% if stuff %}
+                <div class="filter"><a href="/users/" target="_blank">Admin Home</a></div>
+                <div class="filter"><a href="manager/builder/" target="_blank">Add Item</a></div>
+                {% endif %}
+            </div>
+        </div>
+        {% if stuff %}
+            <p class="admin-banner">You are currently viewing an Admin-View logged in as {{ user.username }}</p>
+        {% endif %}
+        <div id="div-top">
+            <h1>Pulse CANOPIES IN STOCK OR COMING SOON</h1>
+            <p>Our focus here has always been on stocking Vector and then Javelin containers,
+                because they were the hard piece to find when trying to put a system together.
+                Lately though, and for several reasons, canopy manufacturers have been having
+                trouble keeping certain canopies in stock. Specifically, for our clientele,
+                the Sabre-3 has been impossible to find so we are starting to buy a few ourselves
+                for stock and we will continue to do so until the situation improves. The canopies
+                are listed here by size first and then by arrival date. A few are in stock but
+                most are due over the next three months. </p>
+            <div id="canopies-btn-group" class="canopies-btn-group">
+                <a href="/sabre3-canopies/">Sabre 3 Canopies</a>
+                <a href="/canopies/">All Canopies</a>
+            </div>
+
+            <h2>Pulse Canopies Currently Available</h2>
+
+        </div>
+        <div id="filter" class="display-opac">
+            <div class="grid">
+            <div class="filter"><a href="/pulse-canopies/#div-top">Top</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-230">230's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-210">210's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-190">190's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-170">170's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-150">150's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-135">135's</a></div>
+            <div class="filter"><a href="/pulse-canopies/#div-120">120's</a></div>
+
+            </div>
+        </div>
+
     {% endif %}
         <div id="div-120" class="sections">
         <h1>107's</h1>
