--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -93,6 +93,12 @@
                         <div id="update-sold-new-customer-display" class="update-sold-new-customer-display"></div>
                     </form>
                 </div>
+                <div id="div-build-new-shipping-data" class="none">
+                    <form method="POST" id="shipping-new-data-form" action="/api/shipping-data-api/" onsubmit="createSoldNewShipping(event)" >
+                        {% csrf_token %}
+                        <div id="update-shipping-new-data-display" class="update-shpping-new-data-display"></div>
+                    </form>
+                </div>
                 <div id="div-id-change" class="none">
                     <form id="form-id-change" action="/api/api" method="POST" onsubmit="updateFields(event)">
                         {% csrf_token %}
@@ -212,4 +218,5 @@
     <script type="text/javascript" src="{% static 'javascript/build-upload-script.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-create-upload.js' %}"></script>
     <script type="text/javascript" src="{% static 'javascript/build-sold-customer.js' %}"></script>
+     <script type="text/javascript" src="{% static 'javascript/build-create-shipping.js' %}"></script>
 {% endblock %}
