SHIPPING API's woooo

--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -19,7 +19,7 @@
                     <button id="display_id_btn" class="btnchanger" onclick="idChange();closeCreateForm()">Select Item To Display</button>
                     <button id="display_update-btn" class="none" onclick="openUpdateGroup()">Update Item</button>
                     <button id="display_sold-btn" class="none" onclick="openSoldGroup(); createSoldDetail()">View Customer/Sold</button>
-                    <button id="display_shipping-btn" class="none" onclick="openShippingGroup()">Add/Update Shipping</button>
+                    <button id="display_shipping-btn" class="none" onclick="openShippingGroup(); openShippingData()">Add/Update Shipping</button>
                 </div>
                 <div id="item-update-btn-group" class="none">
                     <button id="name_on_btn" class="btnchanger" onclick=NameChange();uploadFormOff()>Change Name</button>
