SHIPPING API's woooo

--- a/api/templates/shipping_address_api.html
+++ b/api/templates/shipping_address_api.html
@@ -1,5 +1,5 @@
 <form>
     {% csrf_token %}
     {{ form }}
-    <button type="submit"></button>
+    <button type="submit">Submit</button>
 </form>
