--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -456,6 +456,10 @@ button {
 
 }
 
+.div-build-new-shipping-address {
+
+}
+
 .update-sold-new-customer-display {
     display: flex;
     flex-direction: column;
