--- a/backend/static/css/build.css
+++ b/backend/static/css/build.css
@@ -507,6 +507,7 @@ button {
     border-radius: 10px;
     padding: 10px;
     margin-top: 10px;
+    margin-left: 10px;
 }
 
 #shipping-new-address-display input {
