--- a/frontend/static/css/nav-styles.css
+++ b/frontend/static/css/nav-styles.css
@@ -149,6 +149,12 @@ a {
     right: 50px;
 }
 
+.login a {
+  padding: 10px;
+  border-radius: 10px;
+  background: #b5db1a;
+}
+
 .login3 {
     position: absolute;
     top: 380px;
