--- a/backend/templates/build.html
+++ b/backend/templates/build.html
@@ -134,6 +134,7 @@
 
     const TYPE = {sport_rigs: "sport_rigs", tandem: "tandem"}
     function createForm() {
+        document.getElementById('main-edit-div').style.gridTemplateColumns = 'auto'
         document.getElementById('container-main').style.marginLeft = '30%'
         document.getElementById('display-right').style.marginLeft = '170px'
         document.getElementById('container-main').style.maxWidth = '40%'
